Bug 357516 - Favicons (site icons) on alternates in menus don't update. Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=cl, sr=pink